acceptance/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disscover
  labels:
    app: disscover
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disscover
  template:
    metadata:
      labels:
        app: disscover
    spec:
      automountServiceAccountToken: false
      containers:
        - name: disscover
          image: public.ecr.aws/dissco/disscover:sha-3727667   # Sep-03-2026
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "200m"
      restartPolicy: Always
